Merry Christmas, kill me now

--- a/notebooks/tests.ipynb
+++ b/notebooks/tests.ipynb
@@ -12,7 +12,6 @@
     "# Add the parent directory to the Python path\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "\n",
-    "import pybaseball\n",
     "\n",
     "\n",
     "import IPython #type: ignore\n",
@@ -27,19 +26,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'dict'>\n"
+      "  name_last name_first  key_mlbam key_retro  key_bbref  key_fangraphs  \\\n",
+      "0    ohtani     shohei     660271  ohtas001  ohtansh01          19755   \n",
+      "\n",
+      "   mlb_played_first  mlb_played_last  \n",
+      "0            2018.0           2024.0  \n",
+      "Gathering Player Data\n"
      ]
     }
    ],
    "source": [
-    "print(type(get_roster(\"NYY\", False)))"
+    "#print(type(get_roster(\"NYY\", False)))\n",
+    "from pybaseball import statcast_pitcher\n",
+    "from pybaseball import playerid_lookup\n",
+    "\n",
+    "# Find Anthony Banda's player ID\n",
+    "player_info = playerid_lookup('Ohtani', 'Shohei')\n",
+    "print(player_info)\n",
+    "\n",
+    "# Get data for July 15, 2017 (single day range)\n",
+    "data = statcast_pitcher('2008-04-01', '2017-07-15', player_id = 519242)\n",
+    "\n",
+    "# Print the data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      pitch_type   game_date  release_speed  release_pos_x  release_pos_z  \\\n",
+      "0             SI  2014-03-31           94.1           2.50           5.33   \n",
+      "1             SI  2014-03-31           93.4           2.75           5.23   \n",
+      "2             CH  2014-03-31           85.6           2.83           4.91   \n",
+      "3             CH  2014-03-31           85.2           2.73           4.93   \n",
+      "4             SL  2014-03-31           81.5           2.77           5.40   \n",
+      "...          ...         ...            ...            ...            ...   \n",
+      "11739         SI  2014-04-06           92.7           3.19           5.15   \n",
+      "11740         SI  2014-04-06           95.0           3.07           5.22   \n",
+      "11741         SI  2014-04-06           92.6           3.13           5.03   \n",
+      "11742         SI  2014-04-06           92.6           3.02           5.17   \n",
+      "11743         FF  2014-04-06           91.9           3.06           5.26   \n",
+      "\n",
+      "       player_name  batter  pitcher     events      description  ...  \\\n",
+      "0      Sale, Chris  500871   519242  strikeout  swinging_strike  ...   \n",
+      "1      Sale, Chris  500871   519242        NaN             ball  ...   \n",
+      "2      Sale, Chris  500871   519242        NaN  swinging_strike  ...   \n",
+      "3      Sale, Chris  500871   519242        NaN    called_strike  ...   \n",
+      "4      Sale, Chris  543305   519242     double    hit_into_play  ...   \n",
+      "...            ...     ...      ...        ...              ...  ...   \n",
+      "11739  Sale, Chris  502143   519242        NaN    called_strike  ...   \n",
+      "11740  Sale, Chris  408299   519242  field_out    hit_into_play  ...   \n",
+      "11741  Sale, Chris  408299   519242        NaN    called_strike  ...   \n",
+      "11742  Sale, Chris  408299   519242        NaN    called_strike  ...   \n",
+      "11743  Sale, Chris  408299   519242        NaN             ball  ...   \n",
+      "\n",
+      "       n_thruorder_pitcher  n_priorpa_thisgame_player_at_bat  \\\n",
+      "0                        3                                 0   \n",
+      "1                        3                                 0   \n",
+      "2                        3                                 0   \n",
+      "3                        3                                 0   \n",
+      "4                        3                                 2   \n",
+      "...                    ...                               ...   \n",
+      "11739                    1                                 0   \n",
+      "11740                    1                                 0   \n",
+      "11741                    1                                 0   \n",
+      "11742                    1                                 0   \n",
+      "11743                    1                                 0   \n",
+      "\n",
+      "       pitcher_days_since_prev_game  batter_days_since_prev_game  \\\n",
+      "0                               NaN                          NaN   \n",
+      "1                               NaN                          NaN   \n",
+      "2                               NaN                          NaN   \n",
+      "3                               NaN                          NaN   \n",
+      "4                               NaN                          NaN   \n",
+      "...                             ...                          ...   \n",
+      "11739                           6.0                          NaN   \n",
+      "11740                           6.0                          1.0   \n",
+      "11741                           6.0                          1.0   \n",
+      "11742                           6.0                          1.0   \n",
+      "11743                           6.0                          1.0   \n",
+      "\n",
+      "       pitcher_days_until_next_game batter_days_until_next_game  \\\n",
+      "0                               6.0                         3.0   \n",
+      "1                               6.0                         3.0   \n",
+      "2                               6.0                         3.0   \n",
+      "3                               6.0                         3.0   \n",
+      "4                               6.0                         2.0   \n",
+      "...                             ...                         ...   \n",
+      "11739                           5.0                         2.0   \n",
+      "11740                           5.0                         1.0   \n",
+      "11741                           5.0                         1.0   \n",
+      "11742                           5.0                         1.0   \n",
+      "11743                           5.0                         1.0   \n",
+      "\n",
+      "      api_break_z_with_gravity api_break_x_arm api_break_x_batter_in arm_angle  \n",
+      "0                         1.76            1.31                 -1.31       NaN  \n",
+      "1                         1.60            1.34                 -1.34       NaN  \n",
+      "2                         2.86            1.60                 -1.60       NaN  \n",
+      "3                         2.67            1.61                 -1.61       NaN  \n",
+      "4                         2.73           -0.48                  0.48       NaN  \n",
+      "...                        ...             ...                   ...       ...  \n",
+      "11739                     2.10            1.53                 -1.53       NaN  \n",
+      "11740                     1.47            1.61                 -1.61       NaN  \n",
+      "11741                     1.51            1.33                 -1.33       NaN  \n",
+      "11742                     1.31            1.13                 -1.13       NaN  \n",
+      "11743                     1.21            0.89                 -0.89       NaN  \n",
+      "\n",
+      "[20223 rows x 113 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
    ]
   },
   {
